GGB-2053 visibility fix for moveBtn
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@56948 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/toolbar-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/toolbar-styles.scss
@@ -313,6 +313,7 @@ $movebtn-transition: bottom  250ms cubic-bezier(0.4, 0, 1, 1) 0ms;
 			.showMoveBtn {
 				@extend .moveFloatingBtn;
 				opacity: 1;	 
+				visibility: visible;
 				transition: opacity 0.2s ease;
 			}
 		
@@ -320,6 +321,7 @@ $movebtn-transition: bottom  250ms cubic-bezier(0.4, 0, 1, 1) 0ms;
 				@extend .moveFloatingBtn;
 				cursor: default;
 				opacity: 0;	
+				visibility: hidden;
 				transition: opacity 0.2s ease;
 		
 				img {
